[gd_scene load_steps=2 format=3 uid="uid://cau4gp46uveuh"]

[ext_resource type="Script" uid="uid://bt60wsn2ys3pw" path="res://scenes/main.gd" id="1_glv2v"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "신비의 제왕"

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "새로하기"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "종료"

[node name="GameScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="GameScreen/VBoxContainer"]
layout_mode = 2
text = "캐릭터 정보"

[node name="LogLabel" type="RichTextLabel" parent="GameScreen/VBoxContainer"]
layout_mode = 2
text = "전투 로그 창"

[node name="NextTurnButton" type="Button" parent="GameScreen/VBoxContainer"]
layout_mode = 2
text = "다음 턴 진행"
